@@ -107,6 +107,7 @@
     Unity to not show icons in menus of Qt apps. (There appears to be a bug in
     libdbusmenu-qt https://bugs.launchpad.net/libdbusmenu-qt/+bug/1287337)
     (Qt-only builds)
+67. If connection to MPD faiils, attempt to ascertain if its a proxy error.
 
 1.3.4
 -----
